--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "node-cron": "^3.0.1",
     "nodemailer": "^6.7.7",
     "nodemon": "^1.19.4",
-    "pm2": "^5.2.0"
+    "pm2": "^5.2.0",
+    "slugify": "^1.6.5"
   }
 }
